--- a/reminder2/.env
+++ b/reminder2/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+GITHUB_ID="b2e8ea7b3cdce088fb9a"
+GITHUB_SECRET="ccd7f517595c2a0c3173effbb11bc484a41e36d7"
