--- a/reminder2/.env
+++ b/reminder2/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/reminr"
 GITHUB_ID="b2e8ea7b3cdce088fb9a"
 GITHUB_SECRET="ccd7f517595c2a0c3173effbb11bc484a41e36d7"
