--- a/reminder2/.env
+++ b/reminder2/.env
@@ -5,5 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@127.0.0.1:3306/reminr"
-GITHUB_ID="b2e8ea7b3cdce088fb9a"
-GITHUB_SECRET="ccd7f517595c2a0c3173effbb11bc484a41e36d7"
+GITHUB_ID="a8ec081b02dce093e20e"
+GITHUB_SECRET="575e0e1306e40f16dfc9c2ab5c31c623995fdfec"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET=lhflsqjflfhkdl
